--- a/src/App.css
+++ b/src/App.css
@@ -13,19 +13,23 @@ to {background-position: -100px 0px;background-size:2750px;}
 
 h1 {
     font-weight: 700;
+    
   
 }
 
 h2 {
-    font-weight: 500;
+    font-weight: 700;
+    font-size: 10px;
 }
 
 
-
+p {
+    font-weight: 200;
+}
 
 .container {
     .main-container {
-        background-color: rgba(0, 0, 0, 0.783);
+        background-color: rgba(169, 233, 183, 0.634);
         background-image: url("");
         background-repeat: no-repeat;
         background-position: center;
@@ -41,13 +45,7 @@ h2 {
 
 
 
-/* .carousel-container {
-    padding: 15px;
-    background-color: "#ababab"
-      img-width="1024"
-      img-height="480"
-      style="text-shadow: 1px 1px 2px #333;"
-} */
+
 
 .container {
     width: 100%;
@@ -56,6 +54,7 @@ h2 {
     max-height: 80vh;
     width: auto; /*100vw*/
   }
+
 
 
 .carousel img {
