--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,6 @@
 @import url('https://fonts.googleapis.com/css?family=Source+Code+Pro:200');
 
 
- 
-
 @keyframes slidein {
 from {background-position: top;background-size:3000px; }
 to {background-position: -100px 0px;background-size:2750px;}
@@ -13,9 +11,9 @@ to {background-position: -100px 0px;background-size:2750px;}
 
 h1 {
     font-weight: 700;
+    font-family:Arial, Helvetica, sans-serif;
     
-  
-}
+  }
 
 h2 {
     font-weight: 700;
@@ -24,7 +22,7 @@ h2 {
 
 
 p {
-    font-weight: 200;
+    font-weight: 20px;
 }
 
 .container {
@@ -35,16 +33,10 @@ p {
         background-position: center;
         background-size: cover;
         background-attachment: fixed;
-      
         background-blend-mode: color;
       }
 
     }
-
-
-
-
-
 
 
 .container {
@@ -76,9 +68,15 @@ p {
     font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
-.card-body {
-    margin: 10px;
-    padding: 10px;
+.card-img-top {
+    /* margin: 10px;
+    padding: 10px; */
+    width: 100%;
+    height: 200px;
+}
+
+.church-info {
+    text-align: center;
 }
 
 button:hover {
@@ -91,8 +89,21 @@ button:hover {
     justify-content: "center";
     text-align: center;
     padding: 20px;
-    background-color: #a9a9a95c;
+    background-color: #0907075c;
 }
 
+.space-bottom {
+    margin-bottom: 20px;
+}
 
+.space-right {
+    margin-right: 10px;
+}
 
+.carousel {
+    font-size: 40px;
+    color: rgb(255, 255, 255);
+    text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+
+    /* -webkit-text-stroke: 1px black; */
+}
