--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,14 +1,31 @@
-
+.navbar {
+  height: 80%;
+  width: 100%;
+}
+  
+h1 {
+  color: #000;
+  text-align: center;
+  margin-top: 50px;
+  font-size: calc(3em + 2vw);
+}
 
 ul {
     display: flex;
-    justify-content: space-around;
-    width: 100%;
+    justify-content: right;
+    /* width: 100%; */
     background-color: #333;
-    list-style-type: none;
+  }
+
+  ul ::marker {
+    color: transparent;
+    text-align: right;
   }
 
   li {
     color: white;
     padding: 14px 16px;
+    margin-top: auto;
+    /* margin-bottom: ; */
+    
   }
