--- a/src/components/card-style.css
+++ b/src/components/card-style.css
@@ -4,10 +4,9 @@ body {
 }
 
 
-.card {
+/* .card {
     width: 20rem;
-
-}
+} */
 
 .card:hover over{
     box-shadow: 5px 10px 20px 1px rgba(0,0,0,0.253)!important;
@@ -29,4 +28,28 @@ body {
 .container-fluid .row {
     padding-top:6rem;
 }
+
+/* card EFFECT */
+/******************************** */
+.card-effect {
+    display: block;
+    transform: scale(1.0);
+    transition: transform 0.23s ease-in-out;
+  }
+  
+  .card-effect:hover {
+    transform: scale(1.13);
+    filter: drop-shadow(0 0 10px rgba(0, 5, 9, 0.319));
+    z-index: 999;
+  }
+  
+  /* Disable hover effects on mobile */
+  @media (max-width: 768px) {
+    .card-effect:hover
+    {
+        transform: scale(1.0);
+        filter: none;
+    }
+  }
+
 
