--- a/src/App.css
+++ b/src/App.css
@@ -65,7 +65,7 @@ p {
 
 
 .quote-style{
-    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif
 }
 
 .card-img-top {
